# agents

./: .gitignore
agentkit/: test.py
agentkit/.claude/: settings.local.json
agentkit/personal_assistant/: agent.py  agentkit-agent.py  agentkit.yaml  requirements.txt
crewai_tutorial/: .env.example  pyproject.toml
crewai_tutorial/.claude/: settings.local.json
crewai_tutorial/knowledge/: user_preference.txt
crewai_tutorial/output/: report.md  trace.log.example
crewai_tutorial/src/latest_ai_development/: crew.py
langchain/: langchain_ollama_demo.ipynb  langchain_openai_demo.ipynb  langchain_stream_demo.ipynb  simple_agent.ipynb  weather_agent.ipynb
langchain/llm_compare/: ollama_dmeo.ipynb
langchain/memory/: short_term_memory.ipynb
