[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crewai-tutorial"
version = "0.1.0"
description = "CrewAI tutorial project"
requires-python = ">=3.10,<3.14"

dependencies = [
  "crewai[tools]",
  "python-dotenv"
]

[project.scripts]
run_crew = "latest_ai_development.main:run"
train = "latest_ai_development.main:train"
replay = "latest_ai_development.main:replay"
test = "latest_ai_development.main:test"
run_with_trigger = "latest_ai_development.main:run_with_trigger"

[tool.hatch.build.targets.wheel]
packages = ["src/latest_ai_development"]

[tool.crewai]
type = "crew"
